Closed Bug 1413484 Opened 7 years ago Closed 7 years ago

Tighten up assertions in ChannelMediaResource

Categories

(Core :: Audio/Video: Playback, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox58 --- fixed

People

(Reporter: jwwang, Assigned: jwwang)

References

Details

Attachments

(1 file)

      No description provided.
Assignee: nobody → jwwang
Blocks: 1369263
Priority: -- → P3
Attachment #8924449 - Flags: review?(gsquelart)
Thanks!
Pushed by jwwang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1955a40abe6f
tighten some assertions. r=gerald
https://hg.mozilla.org/mozilla-central/rev/1955a40abe6f
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: