Bug 1413484 - tighten some assertions. r=gerald

mCallback->GetMediaOwner() now is always called before Close() and won't
return null. So is owner->GetMediaElement().

MozReview-Commit-ID: HbxbyuogYAB